# pyIOF

./: .gitignore  .pre-commit-config.yaml  IOF.xsd  IOF_spec.md  pyproject.toml  spec_todo.md
.github/workflows/: lint.yml  pre-commit.yml  test.yml
pyiof/: __init__.py  base.py  class_.py  competitor.py  contact.py  course.py  event.py  fee.py  message_elements.py  misc.py  result.py  start.py  xml_base.py
tests/: model_factories.py  test_base_messages.py  test_control_card_list.py  test_organisation_list.py  test_pyiof.py  test_xml_parsing.py  xml_validator.py
tests/testdata/classlist/: generated.xml
tests/testdata/competitorlist/: generated.xml
tests/testdata/controlcardlist/: generated.xml
tests/testdata/coursedata/: generated.xml
tests/testdata/entrylist/: generated.xml
tests/testdata/eventlist/: generated.xml
tests/testdata/organisationlist/: generated.xml
tests/testdata/resultlist/: generated.xml  teammemberresult-status.xml
tests/testdata/servicerequestlist/: generated.xml
tests/testdata/startlist/: generated.xml
