[tool.poetry]
name = "pyIOF"
version = "0.1.0"
description = "Python bindings for IOF datastandard 3.0"
authors = ["Simske <mail@simske.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic-xml = {extras = ["lxml"], version = "2.14.1"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy  = "*" # version range defined in type-check group
flake8 = "*" # version range defined in linting group

[tool.poetry.group.prototyping]
optional = true

[tool.poetry.group.prototyping.dependencies]
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

[tool.poetry.group.type-check]
optional = true

[tool.poetry.group.type-check.dependencies]
mypy = "^1.14.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
polyfactory = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
